<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:icon="@drawable/home"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/home"/>
        <item
            android:id="@+id/plan"
            android:icon="@drawable/plan"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/plan"/>
        <item
            android:id="@+id/scan"
            android:icon="@drawable/scan"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/scan"/>
        <item
            android:id="@+id/qr_code"
            android:icon="@drawable/qr_code"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/qr_code"/>
        <item
            android:id="@+id/drawing_board"
            android:icon="@drawable/drawing_board"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/drawing_board"/>
        <item
            android:id="@+id/about_us"
            android:icon="@drawable/aboutus"
            android:textColor="@color/black"
            android:iconTint="@color/black"
            android:title="@string/about_us"/>
        <item
            android:id="@+id/close"
            android:title="@string/close"
            android:icon="@drawable/close"/>
    </group>

</menu>