<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color1"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/myTextSize"
        android:textColor="@color/color4"
        android:text="@string/note"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/timeTitle"
        android:textColor="@color/color4"
        android:id="@+id/timeTitle"
        android:paddingTop="10dp"
        android:paddingLeft="5dp"
        android:paddingBottom="10dp"
        android:background="@drawable/round"
        android:layout_marginTop="30dp"
        android:textSize="@dimen/myTextSizeForSub"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"/>
    <TextView
        android:id="@+id/time"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/myTextSizeForSub"
        android:textColor="@color/color3"
        android:text="@string/time"
        android:layout_marginRight="10dp"
        app:layout_constraintBottom_toBottomOf="@id/timeTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/timeTitle"/>
    <TextView
        android:id="@+id/noteTitle"
        android:layout_width="match_parent"
        android:paddingLeft="5dp"
        android:layout_height="wrap_content"
        android:text="@string/noteTitle"
        android:textColor="@color/color4"
        android:textSize="@dimen/myTextSizeForSub"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/timeTitle"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:gravity="center"
        android:id="@+id/note"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/myTextSizeForSub"
        android:textColor="@color/color4"
        android:textColorHint="@color/color3"
        android:hint="@string/noteHint"
        android:background="@drawable/round"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/noteTitle"/>
    <Button
        android:id="@+id/positiveBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/positiveBtn"
        android:clickable="true"
        android:textColor="@color/color4"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@id/note"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round"
        app:layout_constraintLeft_toLeftOf="parent"/>
    <Button
        android:id="@+id/negativeBtn"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/negativeBtn"
        android:clickable="true"
        android:textColor="@color/color4"
        app:layout_constraintTop_toBottomOf="@id/note"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/round"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>