<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color5"
    android:padding="20dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:paddingBottom="100dp">
            <TextView
                android:id="@+id/note_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/myTextSize"
                android:textColor="@color/color4"
                android:text="@string/TextView_title_note"
                android:fontFamily="sans-serif"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>
            <EditText
                android:id="@+id/editText_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:hint="@string/editText_title_hint"
                android:layout_marginTop="20dp"
                android:textColor="@color/color4"
                android:textSize="@dimen/myTextSizeForSub"
                android:textColorHint="@color/color6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_title"
                android:background="@color/white"
                android:inputType="text"/>
            <TextView
                android:id="@+id/note_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/myTextSize"
                android:textColor="@color/color4"
                android:text="@string/TextView_content_note"
                android:fontFamily="sans-serif"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_title"/>
            <EditText
                android:id="@+id/editText_content"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:padding="20dp"
                android:maxLength="300"
                android:hint="@string/editText_content_hint"
                android:layout_marginTop="20dp"
                android:textColor="@color/color4"
                android:textSize="@dimen/myTextSizeForSub"
                android:textColorHint="@color/color6"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_content"
                android:background="@color/white"
                android:inputType="textMultiLine"
                android:gravity="top"/>
            <TextView
                android:id="@+id/note_photo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="@dimen/myTextSize"
                android:textColor="@color/color4"
                android:text="@string/essay_cover"
                android:fontFamily="sans-serif"
                android:layout_marginTop="30dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/editText_content"/>
            <ImageView
                android:id="@+id/upLoad"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@drawable/load"
                android:layout_marginTop="20dp"
                android:scaleType="centerCrop"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/note_photo"
                app:layout_constraintLeft_toLeftOf="parent"
                android:contentDescription="image" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
    <Button
        android:id="@+id/modifyShare"
        android:layout_width="60dp"
        android:layout_height="35dp"
        android:background="@color/color6"
        android:text="@string/finish"
        android:clickable="true"
        android:textSize="@dimen/myTextSizeForSub"
        android:textColor="@color/color4"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true" />
    <TextView
        android:text="@string/modify_share"
        android:textStyle="bold"
        android:gravity="center"
        android:fontFamily="sans-serif"
        android:paddingTop="30dp"
        android:paddingBottom="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textSize="@dimen/myTextSizeForBig"
        android:background="@color/color5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/color4"
        android:id="@+id/note"/>
</androidx.constraintlayout.widget.ConstraintLayout>