<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="220dp"
    android:orientation="vertical"
    android:background="@color/color1">
    <com.example.art.util.roundImageView.RoundImageView
        android:id="@+id/loginLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/boy"
        android:layout_centerVertical="true"
        android:layout_marginTop="@dimen/marginTop_nav"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="31dp" />
    <TextView
        android:id="@+id/loginName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color4"
        android:paddingTop="8dp"
        android:text="@string/login"
        android:textSize="@dimen/myTextSize"
        android:layout_marginLeft="31dp"
        app:layout_constraintRight_toRightOf="@id/loginLogo"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/loginLogo" />
    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/color4"
        android:paddingTop="8dp"
        android:visibility="invisible"
        android:text="@string/clickhere"
        android:textSize="@dimen/myTextSize"
        app:layout_constraintRight_toRightOf="@id/loginName"
        app:layout_constraintLeft_toLeftOf="@id/loginName"
        app:layout_constraintTop_toBottomOf="@id/loginName"/>
    <Button
        android:id="@+id/loginOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/loginout"
        android:textColor="@color/color4"
        android:textSize="@dimen/myTextSize"
        android:background="@drawable/round"
        android:layout_marginTop="50dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>