<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/ripple_bg"
    android:layout_marginTop="5dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <com.example.art.util.roundImageView.RoundImageView
        android:id="@+id/userLogo"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:id="@+id/userName"
        android:text="@string/userName"
        android:textColor="@color/color4"
        android:textSize="@dimen/myTextSizeForSub"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toTopOf="@id/userLogo"
        app:layout_constraintBottom_toBottomOf="@id/userLogo"
        app:layout_constraintLeft_toRightOf="@+id/userLogo"/>
    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/myTextSizeForSmallSub"
        android:text="@string/expert"
        android:textColor="@color/color4"
        android:padding="5dp"
        android:background="@drawable/round2"
        android:layout_marginStart="10dp"
        app:layout_constraintLeft_toRightOf="@id/userName"
        app:layout_constraintTop_toTopOf="@id/userName"
        app:layout_constraintBottom_toBottomOf="@id/userName"/>
    <TextView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/comment"
        android:padding="5dp"
        android:textColor="@color/color4"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/myTextSizeForSmallSub"
        app:layout_constraintTop_toBottomOf="@id/userName"/>
    <ImageView
        android:id="@+id/deleteComment"
        android:layout_width="23dp"
        android:layout_height="23dp"
        android:layout_marginRight="2dp"
        android:layout_marginTop="2dp"
        android:visibility="invisible"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@drawable/close"/>
</androidx.constraintlayout.widget.ConstraintLayout>