<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.CreateAccountActivity">
    <ImageView
        android:background="@drawable/loginbg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_editor_absoluteX="-88dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25dp"
        android:text="@string/createaccount"
        android:layout_marginTop="140dp"
        android:textColor="@color/color2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
    <TextView
        android:id="@+id/inputNameBg"
        android:layout_width="312dp"
        android:layout_height="42dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="215dp"
        android:background="@drawable/round"
        android:textColor="@color/color2"
        android:alpha="0.5"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputName"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:hint="@string/name"
        android:inputType="text"
        android:paddingStart="20dp"
        android:textColor="@color/color2"
        android:textColorHint="@color/color2"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputNameBg"
        app:layout_constraintLeft_toLeftOf="@+id/inputNameBg"
        app:layout_constraintRight_toRightOf="@+id/inputNameBg"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/inputEmailBg"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:layout_marginTop="60dp"
        android:background="@drawable/round"
        android:alpha="0.5"
        android:textColor="@color/color2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/inputNameBg" />
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputEmail"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:textSize="15dp"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:textColor="@color/color2"
        android:textColorHint="@color/color2"
        app:layout_constraintTop_toTopOf="@+id/inputEmailBg"
        app:layout_constraintLeft_toLeftOf="@+id/inputEmailBg"
        app:layout_constraintRight_toRightOf="@+id/inputEmailBg"
        android:hint="@string/email"
        tools:ignore="RtlSymmetry" />
    <TextView
        android:id="@+id/inputPasswordBg"
        android:layout_width="312dp"
        android:layout_height="42dp"
        android:textColor="@color/color2"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/inputEmailBg"
        android:layout_marginTop="60dp"
        android:background="@drawable/round"
        android:alpha="0.5"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPassword"
        android:layout_width="243dp"
        android:layout_height="40dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:textColor="@color/color2"
        android:textColorHint="@color/color2"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/inputPasswordBg"
        app:layout_constraintLeft_toLeftOf="@+id/inputPasswordBg"
        app:layout_constraintRight_toRightOf="@+id/inputPasswordBg"
        tools:ignore="RtlSymmetry" />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/name"
        app:layout_constraintLeft_toLeftOf="@+id/inputNameBg"
        app:layout_constraintTop_toTopOf="@+id/inputNameBg"
        app:layout_constraintRight_toLeftOf="@+id/inputName"
        app:layout_constraintBottom_toBottomOf="@+id/inputNameBg"
        />
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/email"
        app:layout_constraintTop_toTopOf="@+id/inputEmailBg"
        app:layout_constraintLeft_toLeftOf="@+id/inputEmailBg"
        app:layout_constraintRight_toLeftOf="@+id/inputEmail"
        app:layout_constraintBottom_toBottomOf="@+id/inputEmailBg"/>
    <ImageView
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/password_logo"
        app:layout_constraintTop_toTopOf="@+id/inputPasswordBg"
        app:layout_constraintLeft_toLeftOf="@+id/inputPasswordBg"
        app:layout_constraintRight_toLeftOf="@+id/inputPassword"
        app:layout_constraintBottom_toBottomOf="@+id/inputPasswordBg"/>
    <Button
        android:id="@+id/loginButton"
        android:layout_width="253dp"
        android:layout_height="43dp"
        android:text="@string/continueT"
        android:layout_marginTop="100dp"
        android:textColor="@color/color2"
        android:background="@drawable/selector"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputPasswordBg" />

</androidx.constraintlayout.widget.ConstraintLayout>